[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/maps/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Enemy/Chopper.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/FuelTank.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Enemy/Ship.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/maps/Level2.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Enemy/Bridge.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/maps/Level3.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/maps/Level4.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/maps/Level5.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=11]
[ext_resource path="res://graphics/quad.png" type="Texture" id=12]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=2]
resource_name = "BlackScreen"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="GameManager" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )
checkpoints = [ 738, -5022, -10782, -16542, -22302 ]
prestart_speed = 300.0
max_prestart_position_y = -500
min_reset_position_y = 500
fade_anim_offset = 400

[node name="StartingPoint" type="Position2D" parent="."]
position = Vector2( 960, 738 )

[node name="Levels" type="Node" parent="."]
editor/display_folded = true

[node name="Level1" parent="Levels" instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( -1, -4949 )

[node name="Chopper7" parent="Levels/Level1" instance=ExtResource( 3 )]
position = Vector2( 858.818, 339.532 )
is_static = true
distance_to_player = 500.0
speed = 100

[node name="Chopper6" parent="Levels/Level1" instance=ExtResource( 3 )]
position = Vector2( 1058.54, 183.957 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 100

[node name="Chopper5" parent="Levels/Level1" instance=ExtResource( 3 )]
position = Vector2( 563.224, 842.839 )
is_static = true
distance_to_player = 500.0
speed = 100

[node name="Chopper4" parent="Levels/Level1" instance=ExtResource( 3 )]
position = Vector2( 1471.24, 1526.76 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 100

[node name="Chopper3" parent="Levels/Level1" instance=ExtResource( 3 )]
position = Vector2( 821.003, 2800.87 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 100

[node name="Chopper2" parent="Levels/Level1" instance=ExtResource( 3 )]
position = Vector2( 1134.87, 3859.73 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 100

[node name="Chopper" parent="Levels/Level1" instance=ExtResource( 3 )]
position = Vector2( 701.257, 5036.51 )
is_static = true
distance_to_player = 500.0
speed = 100

[node name="FuelTank6" parent="Levels/Level1" instance=ExtResource( 4 )]
position = Vector2( 984.934, 443.551 )

[node name="FuelTank5" parent="Levels/Level1" instance=ExtResource( 4 )]
position = Vector2( 757.248, 990.797 )

[node name="FuelTank4" parent="Levels/Level1" instance=ExtResource( 4 )]
position = Vector2( 1344.44, 1242.45 )

[node name="FuelTank3" parent="Levels/Level1" instance=ExtResource( 4 )]
position = Vector2( 1345.46, 1871.14 )

[node name="FuelTank2" parent="Levels/Level1" instance=ExtResource( 4 )]
position = Vector2( 1370.4, 3604.28 )

[node name="FuelTank" parent="Levels/Level1" instance=ExtResource( 4 )]
position = Vector2( 830.097, 5227.58 )

[node name="Ship8" parent="Levels/Level1" instance=ExtResource( 5 )]
position = Vector2( 1346.15, 782.922 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 100

[node name="Ship7" parent="Levels/Level1" instance=ExtResource( 5 )]
position = Vector2( 924.861, 2330.85 )
is_static = true
distance_to_player = 500.0
speed = 100

[node name="Ship6" parent="Levels/Level1" instance=ExtResource( 5 )]
position = Vector2( 1552.06, 2755.01 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 100

[node name="Ship5" parent="Levels/Level1" instance=ExtResource( 5 )]
position = Vector2( 1677.29, 3024.43 )
is_static = true
distance_to_player = 500.0
speed = 100

[node name="Ship4" parent="Levels/Level1" instance=ExtResource( 5 )]
position = Vector2( 943.198, 3303.38 )
is_static = true
distance_to_player = 500.0
speed = 100

[node name="Ship3" parent="Levels/Level1" instance=ExtResource( 5 )]
position = Vector2( 1284.57, 4139.35 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 100

[node name="Ship2" parent="Levels/Level1" instance=ExtResource( 5 )]
position = Vector2( 841.636, 4361.65 )
is_static = true
distance_to_player = 500.0
speed = 100

[node name="Ship" parent="Levels/Level1" instance=ExtResource( 5 )]
position = Vector2( 1200.23, 4797.25 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 100

[node name="Level2" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 0, -10709 )

[node name="Bridge" parent="Levels/Level2" instance=ExtResource( 7 )]
position = Vector2( 939.034, 5669.9 )

[node name="Chopper8" parent="Levels/Level2" instance=ExtResource( 3 )]
position = Vector2( 1222.11, 266.772 )
scale = Vector2( -1, 1 )
is_static = false
distance_to_player = 500.0
choose_direction = "left"
speed = 200

[node name="Chopper7" parent="Levels/Level2" instance=ExtResource( 3 )]
position = Vector2( 1633.08, 1070.7 )
is_static = true
distance_to_player = 500.0
speed = 200

[node name="Chopper6" parent="Levels/Level2" instance=ExtResource( 3 )]
position = Vector2( 681.352, 569.596 )
scale = Vector2( -1, 1 )
is_static = false
distance_to_player = 700.0
choose_direction = "left"
speed = 200

[node name="Chopper5" parent="Levels/Level2" instance=ExtResource( 3 )]
position = Vector2( 670.537, 1748.44 )
is_static = true
distance_to_player = 500.0
speed = 200

[node name="Chopper4" parent="Levels/Level2" instance=ExtResource( 3 )]
position = Vector2( 1037.88, 2121.31 )
is_static = false
distance_to_player = 1200.0
speed = 200

[node name="Chopper3" parent="Levels/Level2" instance=ExtResource( 3 )]
position = Vector2( 512.78, 4095.16 )
is_static = false
distance_to_player = 700.0
speed = 200

[node name="Chopper2" parent="Levels/Level2" instance=ExtResource( 3 )]
position = Vector2( 563.544, 4552.33 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 200

[node name="Chopper" parent="Levels/Level2" instance=ExtResource( 3 )]
position = Vector2( 1517.39, 4821.94 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 400.0
choose_direction = "left"
speed = 200

[node name="Ship10" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 1438.41, 659.722 )
is_static = false
distance_to_player = 700.0
speed = 120

[node name="Ship9" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 410.974, 1146.4 )
is_static = false
distance_to_player = 300.0
speed = 120

[node name="Ship8" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 1560.98, 1586.22 )
scale = Vector2( -1, 1 )
is_static = true
distance_to_player = 500.0
choose_direction = "left"
speed = 120

[node name="Ship7" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 860.055, 2978.46 )
is_static = false
distance_to_player = 600.0
speed = 120

[node name="Ship6" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 1263.31, 3198.96 )
scale = Vector2( -1, 1 )
is_static = false
distance_to_player = 1000.0
choose_direction = "left"
speed = 120

[node name="Ship5" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 720.804, 3431.6 )
is_static = true
distance_to_player = 500.0
speed = 100

[node name="Ship4" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 1265.28, 4163.66 )
is_static = false
distance_to_player = 300.0
speed = 120

[node name="Ship3" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 1409.4, 5104.35 )
scale = Vector2( -1, 1 )
is_static = false
distance_to_player = 600.0
choose_direction = "left"
speed = 120

[node name="Ship2" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 643.809, 4935.88 )
is_static = true
distance_to_player = 500.0
speed = 120

[node name="Ship" parent="Levels/Level2" instance=ExtResource( 5 )]
position = Vector2( 798.364, 5313.98 )
is_static = false
distance_to_player = 250.0
speed = 120

[node name="FuelTank7" parent="Levels/Level2" instance=ExtResource( 4 )]
position = Vector2( 1612.26, 1288.76 )

[node name="FuelTank6" parent="Levels/Level2" instance=ExtResource( 4 )]
position = Vector2( 493.036, 908.095 )

[node name="FuelTank5" parent="Levels/Level2" instance=ExtResource( 4 )]
position = Vector2( 763.08, 2694.29 )

[node name="FuelTank4" parent="Levels/Level2" instance=ExtResource( 4 )]
position = Vector2( 1322.69, 2329.89 )

[node name="FuelTank3" parent="Levels/Level2" instance=ExtResource( 4 )]
position = Vector2( 660.538, 3930.96 )

[node name="FuelTank2" parent="Levels/Level2" instance=ExtResource( 4 )]
position = Vector2( 1323.36, 3557.24 )

[node name="FuelTank" parent="Levels/Level2" instance=ExtResource( 4 )]
position = Vector2( 1425.35, 4522.2 )

[node name="Level3" parent="Levels" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 0, -16469 )

[node name="Bridge" parent="Levels/Level3" instance=ExtResource( 7 )]
position = Vector2( 946.684, 5761.81 )

[node name="Level4" parent="Levels" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 0, -22229 )

[node name="Bridge" parent="Levels/Level4" instance=ExtResource( 7 )]
position = Vector2( 964.889, 5758.21 )

[node name="Level5" parent="Levels" instance=ExtResource( 10 )]
editor/display_folded = true
position = Vector2( 0, -27989 )

[node name="Bridge" parent="Levels/Level5" instance=ExtResource( 7 )]
position = Vector2( 941.544, 5765.99 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="HUD"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 990, 1013 )
scale = Vector2( 10, 2 )
texture = ExtResource( 12 )

[node name="Lives" type="Label" parent="HUD"]
margin_left = 106.0
margin_top = 939.0
margin_right = 488.0
margin_bottom = 1026.0
custom_fonts/font = SubResource( 1 )
text = "Lives 0"

[node name="Score" type="Label" parent="HUD"]
margin_left = 1297.85
margin_top = 943.0
margin_right = 1878.85
margin_bottom = 1021.0
custom_fonts/font = SubResource( 1 )
text = "Score 0"
align = 1

[node name="Fuel" type="Label" parent="HUD"]
margin_left = 548.0
margin_top = 939.0
margin_right = 1312.0
margin_bottom = 1026.0
custom_fonts/font = SubResource( 1 )
text = "Fuel 0"
align = 1

[node name="Fader" type="Node" parent="HUD"]

[node name="Sprite" type="Sprite" parent="HUD/Fader"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 962.051, 537.35 )
scale = Vector2( 10, 6 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Fader"]
anims/BlackScreen = SubResource( 2 )
anims/FadeIn = SubResource( 3 )
anims/FadeOut = SubResource( 4 )
anims/Idle = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 14 )]
editor/display_folded = true
scale = Vector2( 0.75, 0.75 )
base_speed = 220.0

[node name="FuelTimer" parent="Player" index="2"]
autostart = false
[connection signal="ready_to_go" from="." to="Player" method="_on_ready_to_go"]
[connection signal="reset" from="." to="Player" method="_on_GameManager_reset"]
[connection signal="bonus_score_reached" from="HUD" to="Player" method="_on_HUD_bonus_score_reached"]
[connection signal="fuel_left" from="Player" to="HUD" method="_on_Player_fuel_left"]
[connection signal="lives_left" from="Player" to="HUD" method="_on_Player_lives_left"]
[connection signal="out_of_lives" from="Player" to="HUD" method="_on_Player_out_of_lives"]
[connection signal="player_destroyed" from="Player" to="." method="reset_game"]

[editable path="Player"]
